manifests/base/web/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: threads
  template:
    metadata:
      labels:
        app: threads
    spec:
      containers:
        - name: threads
          image: dangnam141002/threads-fe:v1.0.0
          ports:
            - containerPort: 80
