manifests/base/web/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: threads
spec:
  selector:
    app: threads
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
