manifests/base/web/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: threads.namth.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: threads
                port:
                  number: 80
